--- a/_posts/2019-04-17-example.md
+++ b/_posts/2019-04-17-example.md
@@ -75,6 +75,7 @@ For test set data, MAE is 1828.39. The mean value of the taci trips made on thes
 The model perform better for weekday demand prediction, which probably because lack of the training data for weekend.
 
 ![distances-abandoned-cars]({{ site.url }}{{ site.baseurl }}/assets/images/real_vs_pred.png)
+<img src="./imgs/gh-real_vs_pred.png" width=700>
 
 We map the predicted and actual demand and our prediction model detect the general trend of demand across the space. To make our model more accurate, more predictors could be added into the model.
 
