--- a/_posts/2019-12-14-panel1.md
+++ b/_posts/2019-12-14-panel1.md
@@ -2,20 +2,23 @@
 title: "Distribution of taxi trips by day and by hours"
 date: 2019-12-14
 published: true
-tags: [dataviz, hvplot, altair]
+tags: [dataviz, hvplot, altair, datashader, panel]
 excerpt: "This is the introduction of the prediction model."
 
 ---
 
 ## Introduction
 
-The panel enable user to analyze the daily and hourly change of taxi demand across space in nyc?
+With our analysis system, users are able to get an insight into the distribution of hourly or daily pickups or drop-offs in NYC. What's more, clustering analysis module enable them to understand the different usage patterns. The distribution of passengers count as well as the fares drivers earnd are also offered as histograms.
 
-## Example
+
+## User Guide
+
+Users can customize the color and the transparency of the base map. Date and hour could be selected by date picker and slider. The drop-down list enables user to focus on either pick-up or drop-off.
 
 [Why not have a try and play around with the taxi trips data?](https://notebooks.gesis.org/binder/jupyter/user/fanshi0301-final_project620-2pkq54af/panel/NYCtaxiApp)
-*(Please give it some time to process. Take a sip of coffee first:>)*
+*(Please give it some time. Take a sip of coffee first~:D)*
 
 ![sketch]({{ site.url }}{{ site.baseurl }}/assets/images/sketch_point.png)
 
-See the notebook for more details.
+See the [notebook](https://mybinder.org/v2/gh/fanshi0301/final_project620/master?filepath=NYCtaxiApp.ipynb) for more details.
