--- a/_posts/2019-12-14-panel1.md
+++ b/_posts/2019-12-14-panel1.md
@@ -4,6 +4,8 @@ date: 2019-12-14
 published: true
 tags: [dataviz, hvplot, altair, datashader, panel]
 excerpt: "This is the introduction of the prediction model."
+toc: True
+toc_sticky: true
 
 ---
 
