change the head

--- a/_posts/2019-12-15-panel2.md
+++ b/_posts/2019-12-15-panel2.md
@@ -1,9 +1,9 @@
 ---
-title: "Distribution of taxi trips by day and by hours"
+title: "Panel: How many taxi trips in a taxi zone?"
 date: 2019-12-15
 published: true
 tags: [dataviz, hvplot, altair, datashader, panel]
-excerpt: "This is the introduction of the prediction model."
+excerpt: "People in which neighborhood prefer a taxi ride? Where they want to go? The panel give you the answer."
 toc: True
 toc_sticky: true
 
