--- a/_posts/2019-12-14-panel1.md
+++ b/_posts/2019-12-14-panel1.md
@@ -1,9 +1,9 @@
 ---
-title: "Distribution of taxi trips by day and by hours"
+title: "Panel: Distribution of taxi trips by day and by hours"
 date: 2019-12-14
 published: true
 tags: [dataviz, hvplot, altair, datashader, panel]
-excerpt: "This is the introduction of the prediction model."
+excerpt: "Where are the origins and destinations of those taxi trip? How much can the drivers earn on average? How many people in a taxicab? No matter you care about hourly or daily trips, the panel will give you the answers."
 toc: True
 toc_sticky: true
 
