--- a/_posts/2019-12-15-panel1.md
+++ b/_posts/2019-12-15-panel1.md
@@ -3,7 +3,7 @@ title: "Panel: Distribution of taxi trips by day and by hours"
 date: 2019-12-14
 published: true
 tags: [dataviz, hvplot, altair, datashader, panel]
-excerpt: "Where are the origins and destinations of those taxi trip? How much can the drivers earn on average? How many people in a taxicab? No matter you care about hourly or daily trips, the panel will give you the answers."
+excerpt: "An app enable you to know more about the taxi trips in NYC? Where? Fare amount? ...?"
 toc: True
 toc_sticky: true
 
