--- a/_posts/2019-12-15-panel2.md
+++ b/_posts/2019-12-15-panel2.md
@@ -3,7 +3,7 @@ title: "Panel: How many taxi trips in a taxi zone?"
 date: 2019-12-15
 published: true
 tags: [dataviz, hvplot, altair, datashader, panel]
-excerpt: "People in which neighborhood prefer to travel by taxi? Where do they want to go? Why there are more taxi trips in a certain zone? The panel answer your questions."
+excerpt: "Guess people in which neighborhood prefer to travel by taxi? Say you don't know? Check our app for the answer!"
 toc: True
 toc_sticky: true
 
