--- a/_posts/2019-12-15-panel1.md
+++ b/_posts/2019-12-15-panel1.md
@@ -3,7 +3,7 @@ title: "Panel: Distribution of taxi trips by day and by hours"
 date: 2019-12-14
 published: true
 tags: [dataviz, hvplot, altair, datashader, panel]
-excerpt: "An app enable you to know more about the taxi trips in NYC? Where? Fare amount? ...?"
+excerpt: "An app enable you to know more about the taxi trips in NYC. Where are taxies? Fare amount? ...?"
 toc: True
 toc_sticky: true
 
