update app link

--- a/_posts/2019-12-15-panel2.md
+++ b/_posts/2019-12-15-panel2.md
@@ -19,7 +19,7 @@ Accordingly, the taxi zones based on the neighborhood tabulation areas. The aggr
 
 One can select desired variables from the drop-down menu. The time slider at the right sides allows user to specify the 1-hour time interval. 
 
-[Why not have a try and play around with the taxi trips data?](https://mybinder.org/v2/gh/xiaoranw8/musa620FinalProject/master?urlpath=%2Fpanel%2FZoneDashBoardFINAL)
+[Why not have a try and play around with the taxi trips data?](https://mybinder.org/v2/gh/xiaoranw8/musa620FinalProject/master?urlpath=%2Fpanel%2FTaxiZoneApp)
 *(Please give it some time. Take a sip of coffee first~*:D*)*
 
 ![sketch]({{ site.url }}{{ site.baseurl }}/assets/images/panel2.png)
