update the link

--- a/_posts/2019-12-15-panel1.md
+++ b/_posts/2019-12-15-panel1.md
@@ -18,7 +18,7 @@ With our analysis system, users are able to get an insight into the distribution
 
 Users can customize the color and the transparency of the base map. Date and hour could be selected by date picker and slider. The drop-down list enables user to focus on either pick-up or drop-off.
 
-[Why not have a try and play around with the taxi trips data?](https://notebooks.gesis.org/binder/jupyter/user/fanshi0301-final_project620-2pkq54af/panel/NYCtaxiApp)
+[Why not have a try and play around with the taxi trips data?]https://mybinder.org/v2/gh/fanshi0301/final_project620/master?urlpath=%2Fpanel%2FNYCtaxiApp)
 *(Please give it some time. Take a sip of coffee first~*:D*)*
 
 ![sketch]({{ site.url }}{{ site.baseurl }}/assets/images/sketch_point.png)
